Give slave a different uuid from master

--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -1,5 +1,8 @@
 FROM mysql-master
 
+# Force slave to generaet new UUID
+RUN rm /opt/mysql/server-5.6/data/auto.cnf
+
 ADD ./mysql-setup.sh /mysql-setup.sh
 RUN /bin/bash -l -c "/mysql-setup.sh"
 
